Fixed Jquery SlideDown so that it's animation is not jumpy.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -215,6 +215,7 @@ ul {
 
 .hidden-info-box {
   display: none;
+  overflow: hidden;
   margin-top: 30px;
   margin-bottom: 100px;
   color: gold;
@@ -306,6 +307,7 @@ a:hover {
   /* background: linear-gradient(to top, #dc2430, #7b4397); */
   background: linear-gradient(to top, #ff6c00, gold);
   min-height: 70%;
+  height: 100%;
 }
 
 .features .container {
